--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -207,17 +207,21 @@ body {
   background-color: $FOS-Aubergine-bk;
   #page-wrapper #page {
     background-color: $FOS-Aubergine-bk;
-    
+    min-height: auto;
     #page-content {
       background-color: $body-bg;
     }
 
     .main-inner {
       background-color: $body-bg;    
-      padding: 0 .5rem 1.5rem !important;
+      padding: 0 0.5rem 1.5rem !important;
       max-width: 1320px !important;
+      margin-top: 0;
+      min-height: 86vh;
+      margin-bottom: 0;
       .header-maxwidth {
         max-width: 100%;
+        margin-top: 1.5rem;
     }
 
     }
@@ -299,10 +303,6 @@ body {
   }
 }
 
-.main-inner {
-  padding: 0 0.5rem 1.5rem !important;
-  max-width: 1320px !important;
-}
 
 
 .dropdown {
