--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -205,9 +205,11 @@ table {
 body {
   @include font-body("Isidora Sans Regular");
   background-color: $FOS-Aubergine-bk;
-  #page-wrapper #page {
+  #page-wrapper {
+  min-height: auto;
+  #page {
     background-color: $FOS-Aubergine-bk;
-    min-height: auto;
+    min-height: fit-content;
     #page-content {
       background-color: $body-bg;
     }
@@ -237,7 +239,7 @@ body {
       background-color: $body-bg;
     }
   }
-}
+}}
 
 .popover.footer {
   .popover-body {
