--- a/templates/coursecategory.mustache
+++ b/templates/coursecategory.mustache
@@ -8,6 +8,7 @@
     {{> theme_boost/navbar }}
 
     <div id="page" data-region="mainpage" data-usertour="scroller"class="drawers drag-container">
+    <div id="topofscroll" class="main-inner">
         <div class="grid-category">
             <div class="img_header">
                 <div class="grid-header_content">
@@ -46,10 +47,11 @@
                 {{{contentcategory}}}
             </div>
         </div>
+        </div>
     </div>
     {{{ output.standard_after_main_region_html }}}
-</div>
     {{> theme_boost/footer }}
+</div>
 </html>
 {{#js}}
 M.util.js_pending('theme_boost/loader');
