--- a/style/scss/layouts/_addentry.scss
+++ b/style/scss/layouts/_addentry.scss
@@ -40,7 +40,7 @@
       // Title
       .col1 {
         display: grid;
-        grid-template-columns: 1fr auto;
+        grid-template-columns: 1fr auto auto;
         grid-template-rows: 18px 36.47px auto;
         grid-auto-columns: 1fr;
         gap: 4px 4px;
@@ -50,9 +50,9 @@
         justify-item_customs: stretch;
         align-item_customs: stretch;
         grid-template-areas:
-          "field cta"
-          "value value"
-          "description-cont description-cont";
+          "field lockTranslation cta"
+          "value value value"
+          "description-cont description-cont description-cont";
 
         .field {
           grid-area: field;
@@ -62,6 +62,17 @@
             color: $primary;
           }
         }
+        
+      .lockTranslation {
+        align-self: end;
+        display: grid;
+        grid-area: lockTranslation;
+        margin: auto;
+        grid-template-columns: auto auto;
+        gap: 8px;
+        align-items: baseline;
+        padding: 0 4px;
+      }
 
         .cta {
           align-self: center;
@@ -186,7 +197,7 @@
     // Description
     .cnt_row2 {
       display: grid;
-      grid-template-columns: 1fr auto;
+      grid-template-columns: 1fr auto auto;
       grid-template-rows: 18px repeat(2, auto);
       grid-auto-columns: 1fr;
       gap: 4px 4px;
@@ -196,9 +207,9 @@
       justify-item_customs: stretch;
       align-item_customs: stretch;
       grid-template-areas:
-        "field cta"
-        "value value"
-        "description-cont description-cont";
+        "field lockTranslation cta"
+        "value value value"
+        "description-cont description-cont description-cont";
 
       .field {
         grid-area: field;
@@ -207,6 +218,17 @@
           margin-left: 24px;
           color: $primary;
         }
+      }
+
+      .lockTranslation {
+        align-self: end;
+        display: grid;
+        grid-area: lockTranslation;
+        margin: auto;
+        grid-template-columns: auto auto;
+        gap: 8px;
+        align-items: baseline;
+        padding: 0 4px;
       }
 
       .cta {
