--- a/style/scss/components/_buttons.scss
+++ b/style/scss/components/_buttons.scss
@@ -10,8 +10,9 @@
   color: $FOS-Aubergine-bk;
   font-size: 16px;
 
-  .icon-blog,
-  .icon-lab {
+  .icon-comm,
+  .icon-lab,
+  .icon-blog {
     margin-right: 10px;
   }
 
@@ -23,5 +24,6 @@
   a {
     color: inherit;
     text-decoration: none;
+    white-space: nowrap;
   }
 }
