landing page categories

--- a/templates/frontpage.mustache
+++ b/templates/frontpage.mustache
@@ -166,6 +166,8 @@ Example context (json):
                         </a>
                     </div>
                     {{/cohorts.CEBA}}
+                </div>
+                <div class="container_cat">
                     {{#cohorts.CLR}}
                     <div class="child center_for_legal_responses">
                         <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.CLR}}}">
