--- a/style/scss/layouts/_footer.scss
+++ b/style/scss/layouts/_footer.scss
@@ -3,7 +3,7 @@
   color: $FOS-Sand;
   background-color: $FOS-Flint;
   padding: 30px 20px;
-  font-size: small;
+  font-size: medium;
 
   .grid-footer {
     display: grid;
@@ -13,7 +13,7 @@
     gap: 8px 0px;
     grid-auto-flow: row;
     align-items: center;
-    margin-bottom: 96px;
+    /*margin-bottom: 96px;*/
     grid-template-areas:
       "footer_top"
       "footer_bottom";
