--- a/style/moodle.css
+++ b/style/moodle.css
@@ -6326,6 +6326,7 @@ table {
 }
 .dropdown-menu .dropdown-item.active {
   background-color: #5c3873;
+  color: #fff;
 }
 
 .btn-primary.disabled,
@@ -6374,7 +6375,7 @@ table {
   background-color: #ddd3e1;
 }
 .courseindex .courseindex-section .pageitem:hover a {
-  color: #5c3873 !important;
+  color: #5c3873;
 }
 .courseindex .courseindex-section .courseindex-item-content .pageitem {
   background-color: #5c3873;
@@ -6383,7 +6384,7 @@ table {
   background-color: #ddd3e1;
 }
 .courseindex .courseindex-section .courseindex-item-content .pageitem:hover a {
-  color: #5c3873 !important;
+  color: #5c3873;
 }
 
 body {
@@ -6404,8 +6405,8 @@ body #page-wrapper #page #page-content {
 }
 body #page-wrapper #page .main-inner {
   background-color: #f3eff5;
-  padding: 0 0.5rem 1.5rem !important;
-  max-width: 1320px !important;
+  padding: 0 0.5rem 1.5rem;
+  max-width: 1320px;
   margin-top: 0;
   min-height: 86vh;
   margin-bottom: 0;
@@ -6415,8 +6416,8 @@ body #page-wrapper #page .main-inner .header-maxwidth {
   margin-top: 1.5rem;
 }
 body #page-wrapper #page div.grid-category {
-  padding: 0 0.5rem 1.5rem !important;
-  max-width: 1320px !important;
+  padding: 0 0.5rem 1.5rem;
+  max-width: 1320px;
   width: 100%;
 }
 body #page-wrapper #page #region-main {
@@ -6438,7 +6439,7 @@ body #page-wrapper #page #region-main {
 }
 
 .btn-link {
-  color: #60ad8f !important;
+  color: #60ad8f;
   text-decoration: none;
 }
 .btn-link .icon {
@@ -6446,7 +6447,7 @@ body #page-wrapper #page #region-main {
 }
 
 .bnt-custom-exp {
-  margin-bottom: 20px !important;
+  margin-bottom: 20px;
 }
 
 .navbar-brand .logo {
@@ -6585,5 +6586,18 @@ table#subscribers-table {
   line-height: 2;
 }
 }*/
+/* add field on database activity*/
+a#action-menu-toggle-1 {
+  color: #fff;
+}
+a#action-menu-toggle-1:hover {
+  color: #5c3873;
+  border: 1px solid #5c3873;
+}
+a#action-menu-toggle-1:focus {
+  color: #fff;
+  background-color: #5c3873;
+  border: 1px solid #5c3873;
+}
 
 /*# sourceMappingURL=moodle.css.map */
