--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -135,9 +135,10 @@ table {
   }
   .dropdown-item.active {
     background-color: $primary;
+    color: #fff;
   }
 }
-//------
+
 .btn-primary.disabled,
 .btn-primary:disabled {
   background-color: $primary;
@@ -183,7 +184,7 @@ table {
       &:hover {
         background-color: #ddd3e1;
         a {
-          color: #5c3873 !important;
+          color: #5c3873 ;
         }
       }
     }
@@ -194,7 +195,7 @@ table {
         &:hover {
           background-color: #ddd3e1;
           a {
-            color: #5c3873 !important;
+            color: #5c3873 ;
           }
         }
       }
@@ -218,8 +219,8 @@ body {
 
     .main-inner {
       background-color: $body-bg;    
-      padding: 0 0.5rem 1.5rem !important;
-      max-width: 1320px !important;
+      padding: 0 0.5rem 1.5rem;
+      max-width: 1320px;
       margin-top: 0;
       min-height: 86vh;
       margin-bottom: 0;
@@ -231,8 +232,8 @@ body {
     }
 
     div.grid-category {
-      padding: 0 .5rem 1.5rem !important;
-      max-width: 1320px !important;
+      padding: 0 .5rem 1.5rem;
+      max-width: 1320px;
       width: 100%;
   }
 
@@ -262,7 +263,7 @@ body {
 }
 
 .btn-link {
-  color: $FOS-Caribbean-Green !important;
+  color: $FOS-Caribbean-Green;
   text-decoration: none;
 
   .icon {
@@ -271,7 +272,7 @@ body {
 }
 
 .bnt-custom-exp {
-  margin-bottom: 20px !important;
+  margin-bottom: 20px;
 }
 
 .navbar-brand .logo {
@@ -414,3 +415,17 @@ table#subscribers-table {
   line-height: 2;
 }
 }*/
+
+/* add field on database activity*/
+a#action-menu-toggle-1 {
+  color: #fff;
+  &:hover {
+    color: $primary;
+    border: 1px solid $primary;
+  } 
+  &:focus {
+    color: #fff;
+    background-color: $primary;
+    border: 1px solid $primary;
+  }
+}
