Update login page UI

--- a/style/moodle.css
+++ b/style/moodle.css
@@ -359,8 +359,8 @@ h5 {
   width: 100% !important;
 }
 .ktt_log_page .lg_cnt div[role=main] .loginform .login-heading {
-  font-size: 1.5em !important;
-  font-weight: 500 !important;
+  font-size: 1.2em !important;
+  font-family: "Isidora Sans Medium", sans-serif !important;
   color: #f06043 !important;
 }
 .ktt_log_page .lg_cnt div[role=main] .loginform a.btn.login-identityprovider-btn.btn-block {
