--- a/style/scss/layouts/_login.scss
+++ b/style/scss/layouts/_login.scss
@@ -58,8 +58,8 @@
                 }
 
                 .login-heading {
-                    font-size: 1.5em !important;
-                    font-weight: 500 !important;
+                    font-size: 1.2em !important;
+                    font-family: "Isidora Sans Medium",sans-serif !important; 
                     color: $FOS-Coral !important;
                 }
 
