remove documentation button

--- a/style/scss/layouts/_coursecategory.scss
+++ b/style/scss/layouts/_coursecategory.scss
@@ -56,17 +56,32 @@
     grid-area: cta-btns;
 
     .cta-btns-cont {
-      width: max-content;
       height: auto;
       margin: 0 auto;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto;
+      grid-auto-columns: 1fr;
+      gap: 0 32px;
+      grid-auto-flow: row;
+      justify-content: stretch;
+      align-content: stretch;
+      justify-items: stretch;
+      align-items: stretch;
+      padding: 0;
+      grid-template-areas: "cta-left cta-center";
       .cta-left {
         margin: 8px 4px;
         float: left;
+        justify-self: end;    
+        align-self: center;
+        grid-area: cta-left;
       }
 
       .cta-center {
         margin: 8px 4px;
         float: left;
+        grid-area: cta-center;
       }
 
       .cta-right {
